--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   google_fonts: ^1.1.0
   meta: ^1.1.8
   pedantic: ^1.9.0
-
+  
+  authentication_repository:
+    path: packages/authentication_repository
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
